# hackathon-tv5

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CUDA_BUILD_QUICKREF.md  Cargo-migration.toml  Cargo.toml  Cargo.toml.storage-patch  DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION-SUMMARY.md  Makefile  PERFORMANCE.md  PHASE1_COMPLETE.md  PHASE1_DELIVERABLES.txt  PHASE1_VISUAL_SUMMARY.txt  README-migration.md  README.md  README_HYBRID_STORAGE.md  REASONER_SUMMARY.md  T4_DELIVERABLES.txt  T4_QUICK_REFERENCE.md  build.rs  package.json
semantic-recommender/: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  EXECUTION_SUMMARY.md  MILVUS_DELIVERABLES.txt  PR_INTEGRATION_GUIDE.md  README.md  README_A100_TESTING.md  README_PHASE1.md  STRUCTURE.md  benchmark_t4.cu  t4_comprehensive_benchmark.cu
semantic-recommender/benches/: hybrid_benchmarks.rs  performance_validation.rs  reasoner_bench.rs
semantic-recommender/benchmarks/: t4_benchmarks.sh
semantic-recommender/data/: DATA_GENERATION_PLAN.md  MOVIELENS_MAPPING.md  QUICKSTART.md  README.md
semantic-recommender/data/ontologies/: LICENSE.txt
semantic-recommender/data/synthetic/users/: profile_summary.json
semantic-recommender/design/: CLEANUP_SUMMARY.md  README.md  SSSP_BREAKTHROUGH_SUMMARY.md
semantic-recommender/design/architecture/: system-architecture.md  t4-cluster-architecture.md
semantic-recommender/design/docs/: ADAPTIVE_SSSP_GUIDE.md
semantic-recommender/design/guides/: README.md  deployment-guide.md  gpu-setup-guide.md  learning-pipeline-guide.md
semantic-recommender/design/integration/: ADAPTIVE_SSSP_API_REFERENCE.md  sssp-owl-integration.md
semantic-recommender/design/ontology/: VISUALIZATION.md  expanded-media-ontology.ttl
semantic-recommender/design/scripts/: delete_chaff.sh
semantic-recommender/docker/: Dockerfile.mcp
semantic-recommender/docs/: A100_DEPLOYMENT_GUIDE.md  A100_GPU_BENCHMARK_REPORT.md  A100_TEST_RESULTS.md  API.md  ARCHITECTURE.md  ARCHITECTURE_ORIGINAL_ASCII_BACKUP.md  BREAKTHROUGH_ARCHITECTURE.md  BUILD_SUMMARY.md  CLEANUP_SUMMARY.md  DATA_PIPELINE_COMPLETE.md  DOCUMENTATION_ALIGNMENT_REPORT.md  DOCUMENT_CLEANUP_ANALYSIS.md  EXPECTED_A100_RESULTS.md  FAQ.md  FFI_AUDIT_SUMMARY.md  FFI_INTEGRATION_GUIDE.md  GPU_ONTOLOGY_REASONING.md  HNSW_LSH_IMPLEMENTATION.md  HYBRID_STORAGE_IMPLEMENTATION.md  HYPER_PERSONALIZATION_A100_RESULTS.md  HYPER_PERSONALIZATION_DEPLOYMENT.md  HYPER_PERSONALIZATION_RESULTS.json  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE_V2.md  LINK_FIX_SUMMARY.md  MAPPING_RULES.md  MERMAID_CONVERSION_REPORT.md  MERMAID_QUICK_REFERENCE.md  ONTOLOGY_INTEGRATION_PLAN.md  ONTOLOGY_REASONING_CAPABILITIES.md  ONTOLOGY_SOURCES.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_QUICK_START.md  PRODUCTION_DEPLOYMENT_PLAN.md  PUBLIC_MCP_DEPLOYMENT.md  QUICKSTART.md  README_DOCS.md  RECOMMENDATION_ENGINE_RESULTS.md  SYSTEM_STATUS.md  (+19 more)
semantic-recommender/docs/.doc-alignment-reports/: ARCHIVE_QUICK_REFERENCE.md  CLEANUP_QUICK_REFERENCE.md  LINK_VALIDATION_SUMMARY.md  README.md  archive_plan_enhanced.json  ascii-diagram-analysis.md  document-scores.json  mermaid-analysis.md  stubs.json
semantic-recommender/docs/components/: README_MILVUS.md
semantic-recommender/docs/cuda/: IMPLEMENTATION_SUMMARY.md  graph_search_kernels.md
semantic-recommender/docs/validation/: VALIDATION_GUIDE.md
semantic-recommender/examples/: hybrid_storage_example.rs  unified_pipeline_demo.rs
semantic-recommender/grafana/: performance-dashboard.json
semantic-recommender/k8s/agentdb/: pgvector-init.yaml  redis-statefulset.yaml
semantic-recommender/k8s/milvus/: indexnode-deployment.yaml  milvus-cluster.yaml  minio-statefulset.yaml
semantic-recommender/kernels/: Makefile.a100  semantic_similarity_tf32.cu
semantic-recommender/scripts/: benchmark_a100.py  benchmark_hyper_personalization.py  convert_ascii_to_mermaid.py  deploy_and_bench_a100.sh  deploy_and_test_a100.sh  generate_embeddings.py  generate_platform_data.py  generate_user_profiles.py  gpu_hyper_personalization.py  gpu_ontology_reasoning.py  gpu_recommend.py  mcp_server.py  mcp_server_http.py  parse_movielens.py  populate_agentdb.py  populate_milvus.py  populate_neo4j.py  rebuild_architecture_clean.py  requirements.txt  run_all.sh  run_recommendations.py  test_a100_comprehensive.py  validate_data.py
semantic-recommender/sql/: agentdb-schema.sql
semantic-recommender/src/api/: Cargo.toml  graphql.rs  mcp.rs  models.rs  openapi.yaml  recommendation.rs
semantic-recommender/src/cuda/: verify_implementation.sh
semantic-recommender/src/docs/: PERFORMANCE.md
semantic-recommender/src/examples/: ontology_reasoning.rs  simple_similarity.rs
semantic-recommender/src/integration/: app_state.rs  embedding_service.rs  health.rs  mod.rs  stub_gpu.rs  tests.rs
semantic-recommender/src/migration/: agentdb.rs  rollback.rs  validator.rs
semantic-recommender/src/rust/: Cargo.toml  lib.rs  lib_storage.rs  ontology_reasoner.rs  whelk_inference_engine.rs
semantic-recommender/src/storage/: dual_write.rs
semantic-recommender/tests/: README.md  cuda_integration_test.rs  migration_test.rs
semantic-recommender/tests/docs/: TEST_SUMMARY.md
semantic-recommender/tests/fixtures/: mod.rs  query_generator.rs
src/rust/: Cargo.toml  build.rs  lib.rs
src/rust/adaptive_sssp/: mod.rs
src/rust/agentdb/: coordinator.rs
src/rust/distributed/: gpu_node_service.rs  shard_manager.rs
src/rust/examples/: adaptive_sssp_example.rs
src/rust/gpu_engine/: adaptive_sssp.rs  engine.rs  gpu_bridge.rs  hybrid_sssp_ffi.rs  kernels.rs  kernels_complete.rs  memory.rs  mod.rs  pathfinding.rs
src/rust/models/: content.rs  gpu_types.rs  mod.rs  ontology_ffi_tests.rs
src/rust/ontology/: Cargo.toml  README.md  loader.rs  mod.rs  reasoner.rs  validator.rs
src/rust/semantic_search/: cache.rs  explanation.rs  mod.rs  ranking.rs  recommendation.rs  unified_engine.rs
src/rust/storage/: neo4j_client.rs  redis_cache.rs
src/rust/tests/: agentdb_integration_test.rs  hybrid_sssp_ffi_tests.rs  ontology_rust_sync_test.rs
(+337 files in other folders)
