[workspace]
members = ["src/rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["John O'Hare <hackathon@thedreamlab.uk>"]
license = "Apache-2.0"
repository = "https://github.com/jjohare/hackathon-tv5"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# CUDA integration
cudarc = { version = "0.10", features = ["driver", "nvrtc"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Database
neo4j = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
