[workspace]
members = ["src/rust", "src/api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Media Gateway Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cudarc = { version = "0.11", features = ["cuda-11070"] }
clap = { version = "4.5", features = ["derive"] }

[package]
name = "hackathon-tv5"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
neo4rs = "0.7"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
rand = "0.8"
clap = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
testcontainers = "0.15"
tokio-test = "0.4"

[[test]]
name = "mapper_tests"
path = "tests/mapper_tests.rs"

[[test]]
name = "hybrid_integration_tests"
path = "tests/hybrid_integration_tests.rs"

[[test]]
name = "chaos_tests"
path = "tests/chaos_tests.rs"

[[test]]
name = "load_tests"
path = "tests/load_tests.rs"

# Benchmarks disabled - files not present
# [[bench]]
# name = "hybrid_benchmarks"
# harness = false

# [[bench]]
# name = "performance_validation"
# harness = false

# Binary disabled - file not present
# [[bin]]
# name = "load-generator"
# path = "src/bin/load-generator.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
