[package]
name = "media-recommendation-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "recommendation_engine"
path = "lib.rs"

[dependencies]
# Use workspace dependencies
tokio.workspace = true
cudarc = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }

# Additional crate-specific dependencies
rayon = "1.8"
ndarray = "0.15"
bytemuck = "1.14"

[features]
default = []  # CPU-only by default until CUDA kernels are compiled
gpu = ["cudarc"]
cpu-only = []

[dev-dependencies]
tokio-test = "0.4"
