[package]
name = "media-recommendation-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "recommendation_engine"
path = "lib.rs"

[dependencies]
tokio.workspace = true
cudarc = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }

rayon = "1.8"
ndarray = "0.15"
bytemuck = "1.14"
petgraph = "0.6"
dashmap = "5.5"

# Neo4j and RDF
neo4rs = "0.9.0-rc.9"
rio_api = "0.8"
rio_turtle = "0.8"

# AgentDB dependencies
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
sha2 = "0.10"
rand = "0.8"
rand_distr = "0.4"

[features]
default = []
gpu = ["cudarc"]
cpu-only = []

[dev-dependencies]
tokio-test = "0.4"
